--- a/vrz_DataReplication_FINAL.Rmd
+++ b/vrz_DataReplication_FINAL.Rmd
@@ -205,9 +205,40 @@ Before moving on, I made sure to compare the summary statistics of this model wi
 summary(P1M1)
 print(P1M1_anova)
 ```
-Overall, this model (P1M1) and model testing revealed that the interaction between species and infant age was not significant - under the 'Response: alone/total" part of the anova output we can see that "species:age" p-val is 0.470. Thus, I next refitted the model to include species and infant age as independent fixed-effects. When I first worked through this replication, I pulled out the chisq x2, df, and p val into new objects after each Anova for making my figures (I did this using `tidy` function from `{broom}`. 
 
 <br>
+
+Overall, this model (P1M1) and model testing revealed that the interaction between species and infant age was not significant - under the 'Response: alone/total" part of the anova output we can see that "species:age" p-val is 0.470. Thus, I next had to refit the model to include species and infant age as independent fixed-effects. Before running the next model, I pulled out the chisq x2, df, and p val from the Anova  using `tidy` function from `{broom}` in order to more easily compare and confirm my numbers with the outputs from Lee et al. (2021). 
+
+
+```{r anova p1m1}
+#my results P1M1
+P1M1_results <- tidy(P1M1_anova)
+P1M1_results_x2 <- P1M1_results$statistic[4]
+P1M1_results_df <- P1M1_results$df[4]
+P1M1_results_p <- P1M1_results$p.value[4]
+
+#article results P1M1
+Lee_P1M1_x2 <- c(1.510)
+Lee_P1M1_df <- c(2)
+Lee_P1M1_p <- c(0.470)
+```
+
+```{r P1M1 compare}
+Version <- c("Replication", "Original")
+P1M1_x2 <- c(P1M1_results_x2, Lee_P1M1_x2)
+P1M1_df <- c(P1M1_results_df, Lee_P1M1_df)
+P1M1_p <- c(P1M1_results_p, Lee_P1M1_p)
+P1M1_compare <- data.frame(Version,P1M1_x2,P1M1_df,P1M1_p)
+
+P1M1_compare %>%
+  kbl() %>%
+  kable_styling()
+```
+
+The only difference in the values from this first model/test are because of rounding, but you can see the models/test had the same output.
+
+
 
 
 ---
@@ -223,19 +254,68 @@ P1M2 <- glmmTMB(alone/total ~ species + age + (1 | ID), data = time_alone, famil
 P1M2_anova <- Anova(P1M2, type = c("II"), test.statistic = "Chisq")
 ```
 
+<br>
 
-
-```{r P1M2 explore}
+I again checked the results if the model summary and Anova below matched Lee et al.(2021). And they do! We can see from the Anova results that *species* had a significant affect on the model with a very low p val.
+```{r P1M2 summ}
 summary(P1M2)
 print(P1M2_anova)
 ```
-I again checked the results of the model summary and Anova below matched Lee et al.(2021). And they do! We can see from the Anova results above that *species* had a significant affect on the model with a very low p val. After confirming my models and model tests, I moved on to running dispersion tests for both the interaction model (P1M1) and independent model (P1M2).
+
+I next pulled out the summary statistics from the Anova in order to more easily compare to the original.
+
+
+```{r anova p1m2}
+#my results P1M2
+P1M2_results <- tidy(P1M2_anova)
+
+#pulling out values for species
+P1M2_SPECIES_x2 <- P1M2_results$statistic[1]
+P1M2_SPECIES_df <- P1M2_results$df[1]
+P1M2_SPECIES_p <- P1M2_results$p.value[1]
+
+#pulling out values for age
+P1M2_AGE_x2 <- P1M2_results$statistic[2]
+P1M2_AGE_df <- P1M2_results$df[2]
+P1M2_AGE_p <- P1M2_results$p.value[2]
+
+#article results P1M2
+Lee_species_x2 <- c(26.321)
+Lee_species_df <- c(1)
+Lee_species_p <- c(0.001)
+Lee_age_x2 <- c(0.414)
+Lee_age_df <- c(1)
+Lee_age_p <- c(0.813)
+```
+
+```{r P1M2 compare}
+Version <- c("Replication", "Original")
+Species_x2 <- c(P1M2_SPECIES_x2, Lee_species_x2)
+Species_df <- c(P1M2_SPECIES_df, Lee_species_df)
+Species_p <- c(P1M2_SPECIES_p, Lee_species_p)
+P1M2_SPcompare <- data.frame(Version,Species_x2,Species_df,Species_p)
+
+Age_x2 <- c(P1M2_AGE_x2, Lee_age_x2)
+Age_df <- c(P1M2_AGE_df, Lee_age_df)
+Age_p <- c(P1M2_AGE_p, Lee_age_p)
+P1M2_AGEcompare <- data.frame(Version,Age_x2,Age_df,Age_p)
+
+P1M2_SPcompare %>%
+  kbl() %>%
+  kable_styling()
+
+P1M2_AGEcompare %>%
+  kbl() %>%
+  kable_styling()
+```
+
+After confirming my models and model tests above, I moved on to running dispersion tests for both the interaction model (P1M1) and independent model (P1M2).
 
 <br>
 
 ---
 
-### P1: Dispersion Tests
+### P2M1/M2 Dispersion Tests
 
 ---
 
@@ -246,16 +326,30 @@ P1M1_sim <- simulateResiduals(fittedModel = P1M1, plot = TRUE) #default is 250, 
 testDispersion(P1M1_sim)
 ```
 
-My values (deviance = 8.7923, *P* = 0.96) are slightly different than those from the article (deviance = 0.957, *P* = 0.960), but that's to be expected when running a simulation.
-
-
 I also used `testDispersion` for the independent model for prediction one, P1M2
 ```{r P1M2 sim}
 P1M2_sim <- simulateResiduals(fittedModel = P1M2, plot = TRUE) #default is 250, authors may have increased because #s slightly dif
 testDispersion(P1M2_sim)
 ```
 
-Also got the same *P val* for this dispersion test but different deviance ratio, again likely because of simulation differences (dispersion = 0.972, *P* = 0.896). The article reported the following dispersion test results for P1M2: deviance ratio = 1.002 and *P* = 0.928.
+My values are slightly different than those from the article for both model dispersion tests, but that's to be expected when running a simulation.
+
+```{r disp p1m1m2}
+Version <- c("Replication", "Original")
+P1M1_Disp <- c(0.87923, 0.957)
+P1M2_Disp <- c(0.96, 0.960)
+P1M1_P <- c(0.972, 1.002)
+P1M2_P <- c(0.896, 0.928)
+
+P1_Dispersion <- data.frame(Version, P1M1_Disp, P1M1_P, P1M2_Disp, P1M2_P)
+
+P1_Dispersion %>%
+  kbl() %>%
+  kable_styling()
+
+```
+
+These numbers do not exactly match up but show the same results that the models we fit do not show any significant overdispersion. 
 
 <br>
 
@@ -298,7 +392,35 @@ P2M1_anova <- Anova(P2M1, type = c("III"), test.statistic = "Chisq")
 summary(P2M1)
 print(P2M1_anova)
 ```
-I again checked the results of the model summary and Anova matched Lee et al.(2021). And they do! We can see from the Anova results above that the interaction between species and infant age was not significant when looking at proportion of time spent feeding. The next step is to refit  the model with species and age as independent fixed-effects. 
+
+
+```{r anova p2m1}
+#my results P2M1
+P2M1_results <- tidy(P2M1_anova)
+P2M1_results_x2 <- P2M1_results$statistic[4]
+P2M1_results_df <- P2M1_results$df[4]
+P2M1_results_p <- P2M1_results$p.value[4]
+
+#article results P2M1
+Lee_P2M1_x2 <- c(4.359)
+Lee_P2M1_df <- c(2)
+Lee_P2M1_p <- c(0.113)
+```
+
+```{r P2M1 compare}
+Version <- c("Replication", "Original")
+P2M1_x2 <- c(P2M1_results_x2, Lee_P2M1_x2)
+P2M1_df <- c(P2M1_results_df, Lee_P2M1_df)
+P2M1_p <- c(P2M1_results_p, Lee_P2M1_p)
+P2M1_compare <- data.frame(Version,P2M1_x2,P2M1_df,P2M1_p)
+
+P2M1_compare %>%
+  kbl() %>%
+  kable_styling()
+```
+
+
+I again checked the results of the model summary and Anova matched Lee et al.(2021). And they do! We can see from the Anova results above that the interaction between species and infant age was not significant when looking at proportion of time spent feeding. The next step is to refit the model with species and age as independent fixed-effects. 
 
 <br>
 
@@ -308,8 +430,8 @@ I again checked the results of the model summary and Anova matched Lee et al.(20
 
 ---
 
-Interaction was **not** significant so I next needed to model species and infant age as independent fixed-effects for the feeding data. I used about the same model function but changed `species * age` to `species + age` and used a type II Anova instead of the type III test needed for interaction affects.
-**now looking at species and age as independent fixed effects**
+Interaction was **not** significant in the model testing proportion of time spent feeding so I next needed to model species and infant age as independent fixed-effects for the feeding data. I used about the same model function but changed `species * age` to `species + age` and used a type II Anova instead of the type III test needed for interaction affects.
+
 
 ```{r feed p2m2}
 P2M2 <- glmmTMB(feed/total ~ species + age + (1 | ID), data = feed_travel_social, family = betabinomial(link = "logit"), weight = total)
@@ -322,7 +444,91 @@ print(P2M2_anova)
 ```
 **age has significant effect on feeding model  (supported by article)**
 
+
+
+```{r anova p2m2}
+#my results P2M2
+P2M2_results <- tidy(P2M2_anova)
+
+#pulling out values for species
+P2M2_SPECIES_x2 <- P2M2_results$statistic[1]
+P2M2_SPECIES_df <- P2M2_results$df[1]
+P2M2_SPECIES_p <- P2M2_results$p.value[1]
+
+#pulling out values for age
+P2M2_AGE_x2 <- P2M2_results$statistic[2]
+P2M2_AGE_df <- P2M2_results$df[2]
+P2M2_AGE_p <- P2M2_results$p.value[2]
+
+#article results P2M2
+Lee_species_x2 <- c(0.032)
+Lee_species_df <- c(1)
+Lee_species_p <- c(0.857)
+
+Lee_age_x2 <- c(8.379)
+Lee_age_df <- c(2)
+Lee_age_p <- c(0.015)
+```
+
+```{r P2M2 compare}
+Version <- c("Replication", "Original")
+Species_x2 <- c(P2M2_SPECIES_x2, Lee_species_x2)
+Species_df <- c(P2M2_SPECIES_df, Lee_species_df)
+Species_p <- c(P2M2_SPECIES_p, Lee_species_p)
+P2M2_SPcompare <- data.frame(Version,Species_x2,Species_df,Species_p)
+
+Age_x2 <- c(P2M2_AGE_x2, Lee_age_x2)
+Age_df <- c(P2M2_AGE_df, Lee_age_df)
+Age_p <- c(P2M2_AGE_p, Lee_age_p)
+P2M2_AGEcompare <- data.frame(Version,Age_x2,Age_df,Age_p)
+
+P2M2_SPcompare %>%
+  kbl() %>%
+  kable_styling()
+
+P2M2_AGEcompare %>%
+  kbl() %>%
+  kable_styling()
+```
+
+After confirming my models and model tests above, I moved on to running dispersion tests for both the interaction model (P2M1) and independent model (P2M2).
+
+---
+
+### P2M1/M2 Dispersion Tests
+
+---
+
+To look at nonparametric dispersion tests using the `testDispersion()` function from `{DHARMa}`... first need to simulateResiduals
+
+
+```{r p2m12 disp}
+P2M1_sim <- simulateResiduals(fittedModel = P2M1, plot = TRUE) #feeding interaction
+testDispersion(P2M1_sim)
+P2M2_sim <- simulateResiduals(fittedModel = P2M2, plot = TRUE) #feeding independent
+testDispersion(P2M2_sim)
+
+```
+
+```{r disp p2m12}
+Version <- c("Replication", "Original")
+P2M1_Disp <- c(1.1414, 1.066)
+P2M2_Disp <- c(1.2964, 1.146)
+P2M1_P <- c(0.584, 0.496)
+P2M2_P <- c(0.176, 0.216)
+
+P2M1.M2_Dispersion <- data.frame(Version, P2M1_Disp, P2M1_P, P2M2_Disp, P2M2_P)
+
+P2M1.M2_Dispersion %>%
+  kbl() %>%
+  kable_styling()
+
+```
+
+Like before, these numbers do not exactly match up but show the same results that the fitted models do not show any significant overdispersion. 
+
 <br>
+
 
 ---
 
@@ -330,19 +536,47 @@ print(P2M2_anova)
 
 ---
 
-Interact model first
+The other part of the second prediction involves fitting a model for the proportion of time spent traveling. I first modeled P2M3 to include the interaction of species and age.
 
 ```{r p2m3}
 P2M3 <- glmmTMB(travel/total ~ species * age + (1 | ID), data = feed_travel_social, family = betabinomial(link = "logit"), weight = total)
 P2M3_anova <- Anova(P2M3, type = c("III"), test.statistic = "Chisq")
 ```
 
-look at model/anova results and compare with paper
 
 ```{r p2m3 sum}
 summary(P2M3)
 print(P2M3_anova)
 ```
+
+
+```{r anova p2m3}
+#my results P2M3
+P2M3_results <- tidy(P2M3_anova)
+P2M3_results_x2 <- P2M3_results$statistic[4]
+P2M3_results_df <- P2M3_results$df[4]
+P2M3_results_p <- P2M3_results$p.value[4]
+
+#article results P2M3
+Lee_P2M3_x2 <- c(0.850)
+Lee_P2M3_df <- c(2)
+Lee_P2M3_p <- c(0.654)
+```
+
+```{r P2M3 compare}
+Version <- c("Replication", "Original")
+P2M3_x2 <- c(P2M3_results_x2, Lee_P2M3_x2)
+P2M3_df <- c(P2M3_results_df, Lee_P2M3_df)
+P2M3_p <- c(P2M3_results_p, Lee_P2M3_p)
+P2M3_compare <- data.frame(Version,P2M3_x2,P2M3_df,P2M3_p)
+
+P2M3_compare %>%
+  kbl() %>%
+  kable_styling()
+```
+
+
+I again checked the results of the model summary and Anova matched Lee et al.(2021). And they do! We can see from the Anova results above that the interaction between species and infant age was not significant when looking at proportion of time spent traveling. The slight difference between my replication and the original is just due to rounding. The next step is to refit the travel model with species and age as independent fixed-effects. 
 
 <br>
 
@@ -352,55 +586,101 @@ print(P2M3_anova)
 
 ---
 
-**now looking at species and age as independent fixed effects**
+I now modeled proportion of time traveling with age and species as independent fixed-effects.
 
 ```{r travel p2m4}
 P2M4 <- glmmTMB(travel/total ~ species + age + (1 | ID), data = feed_travel_social, family = betabinomial(link = "logit"), weight = total)
 P2M4_anova <- Anova(P2M4, type = c("II"), test.statistic = "Chisq")
 ```
 
-look at model/anova results and compare with paper
-
 ```{r travel ind sum}
 summary(P2M4)
 print(P2M4_anova)
 ```
-**age has significant effect on feeding model  (supported by article)**
+**age has significant effect on feeding model (supported by article)**
+
+
+```{r anova p2m4}
+#my results P2M4
+P2M4_results <- tidy(P2M4_anova)
+
+#pulling out values for species
+P2M4_SPECIES_x2 <- P2M4_results$statistic[1]
+P2M4_SPECIES_df <- P2M4_results$df[1]
+P2M4_SPECIES_p <- P2M4_results$p.value[1]
+
+#pulling out values for age
+P2M4_AGE_x2 <- P2M4_results$statistic[2]
+P2M4_AGE_df <- P2M4_results$df[2]
+P2M4_AGE_p <- P2M4_results$p.value[2]
+
+#article results P2M4
+Lee_species_x2 <- c(1.334)
+Lee_species_df <- c(1)
+Lee_species_p <- c(0.248)
+
+Lee_age_x2 <- c(7.153)
+Lee_age_df <- c(2)
+Lee_age_p <- c(0.028)
+```
+
+```{r P2M4 compare}
+Version <- c("Replication", "Original")
+Species_x2 <- c(P2M4_SPECIES_x2, Lee_species_x2)
+Species_df <- c(P2M4_SPECIES_df, Lee_species_df)
+Species_p <- c(P2M4_SPECIES_p, Lee_species_p)
+P2M4_SPcompare <- data.frame(Version,Species_x2,Species_df,Species_p)
+
+Age_x2 <- c(P2M4_AGE_x2, Lee_age_x2)
+Age_df <- c(P2M4_AGE_df, Lee_age_df)
+Age_p <- c(P2M4_AGE_p, Lee_age_p)
+P2M4_AGEcompare <- data.frame(Version,Age_x2,Age_df,Age_p)
+
+P2M4_SPcompare %>%
+  kbl() %>%
+  kable_styling()
+
+P2M4_AGEcompare %>%
+  kbl() %>%
+  kable_styling()
+```
+
+After confirming my models and model tests above, I moved on to running dispersion tests for both the interaction model (P2M3) and independent model (P2M4) for the travel models.
 
 <br>
 
 ---
 
-### P2: Dispersion Tests
+### P2M3/M4 Dispersion Tests
 
 ---
 
-Next need to look at nonparametric dispersion tests using the `testDispersion()` function from `{DHARMa}`... first need to simulateResiduals
+To look at nonparametric dispersion tests using the `testDispersion()` function from `{DHARMa}`... first need to simulateResiduals
 
-#### Feeding
-
-```{r p2 disp}
-P2M1_sim <- simulateResiduals(fittedModel = P2M1, plot = TRUE) #feeding interaction
-testDispersion(P2M1_sim)
-P2M2_sim <- simulateResiduals(fittedModel = P2M2, plot = TRUE) #feeding independent
-testDispersion(P2M2_sim)
-
-```
-
-**NEED TO PULL OUT PVAL AND DEVIANCE RATIO FOR INTERACTION/INDEPENDENT DISPERSION TESTS**
-Not getting exactly same value for deviance ratio... could have to do with how data was simulated?
-
-#### Traveling
-
-```{r p2 travel sim}
+```{r p2m34 travel sim}
 P2M3_sim <- simulateResiduals(fittedModel = P2M3, plot = TRUE) #travel interaction
 testDispersion(P2M3_sim)
 P2M4_sim <- simulateResiduals(fittedModel = P2M4, plot = TRUE) #travel independent
 testDispersion(P2M4_sim)
 ```
 
-Also got the same P val for this dispersion test but different deviance ratio (again prob because of simulation differences)...
 
+```{r disp p2m34}
+Version <- c("Replication", "Original")
+P2M3_Disp <- c(0.73323, 0.859)
+P2M4_Disp <- c(0.80546, 0.895)
+P2M3_P <- c(0.2, 0.200)
+P2M4_P <- c(0.368, 0.328)
+
+P2M3.M4_Dispersion <- data.frame(Version, P2M3_Disp, P2M3_P, P2M4_Disp, P2M4_P)
+
+P2M3.M4_Dispersion %>%
+  kbl() %>%
+  kable_styling()
+
+```
+
+Like before, these numbers do not exactly match up but show the same results that the fitted models do not show any significant overdispersion. 
 <br>
 
 ---
@@ -411,20 +691,9 @@ Also got the same P val for this dispersion test but different deviance ratio (a
 
 >Lactating bonobos spend more time engaged in social interactions compared to chimpanzees
 
-'To test our third prediction that lactating bonobos spend more
-time engaged in social interactions, we ran two sets of models
-called Social Interactions and Adjusted Social Interactions. We
-calculated our response variable for social interactions by dividing
-the number of point samples that a given lactating female
-was engaged in social interactions during each infant age class by
-the total number of good observations collected on that lactating
-female during that infant age class. We calculated our response
-variable for adjusted social interactions by dividing the number
-of point samples that a given lactating female was engaged in
-social interactions with individuals other than her immature offspring
-during each infant age class by the total number of social
-interaction point samples collected on that lactating female
-during that infant age class.'
+The final prediction Lee et al. (2021) tested involved looking at the proportion of time spent socializing with others (P3M1) and then social interaction with individuals other than their dependent offspring (P3M4). Like with all other models, I started by first testing the interaction between species and infant age on time spent socializing. 
+
+<br>
 
 ---
 
@@ -432,7 +701,7 @@ during that infant age class.'
 
 ---
 
-first test interaction of species and age when looking at social behav
+The response variable for this first model was calculated by dividing the number of point samples that a given lactating female was engaged in social interactions during each infant age class by the total number of good observations collected on that lactating female during the given infant age class. The model includes the interaction between species and infant agee.
 ```{r P3M1}
 P3M1 <- glmmTMB(social/total ~ species * age + (1 | ID), data = feed_travel_social, family = betabinomial(link = "logit"), weight = total)
 P3M1_anova <- Anova(P3M1, type = c("III"), test.statistic = "Chisq")
@@ -444,6 +713,32 @@ summary(P3M1)
 print(P3M1_anova)
 ```
 
+```{r anova p3m1}
+#my results P3M1
+P3M1_results <- tidy(P3M1_anova)
+P3M1_results_x2 <- P3M1_results$statistic[4]
+P3M1_results_df <- P3M1_results$df[4]
+P3M1_results_p <- P3M1_results$p.value[4]
+
+#article results P3M1
+Lee_P3M1_x2 <- c(0.870)
+Lee_P3M1_df <- c(2)
+Lee_P3M1_p <- c(0.647)
+```
+
+```{r P3M1 compare}
+Version <- c("Replication", "Original")
+P3M1_x2 <- c(P3M1_results_x2, Lee_P3M1_x2)
+P3M1_df <- c(P3M1_results_df, Lee_P3M1_df)
+P3M1_p <- c(P3M1_results_p, Lee_P3M1_p)
+P3M1_compare <- data.frame(Version,P3M1_x2,P3M1_df,P3M1_p)
+
+P3M1_compare %>%
+  kbl() %>%
+  kable_styling()
+```
+I again checked the results of the model summary and Anova matched Lee et al.(2021). And they do! We can see from the Anova results above that the interaction between species and infant age was not significant when looking at proportion of time spent in social interaction. The slight difference between my replication and the original is just due to rounding. The next step is to refit the social model with species and age as independent fixed-effects. 
+
 <br>
 
 ---
@@ -452,7 +747,7 @@ print(P3M1_anova)
 
 ---
 
-**now looking at species and age as independent fixed effects**
+I now modeled proportion of time spent in social interaction with age and species as independent fixed-effects.
 
 ```{r P3M2}
 P3M2 <- glmmTMB(social/total ~ species + age + (1 | ID), data = feed_travel_social, family = betabinomial(link = "logit"), weight = total)
@@ -468,6 +763,87 @@ print(P3M2_anova)
 
 **neither age or species has significant effect on social (supported by article)**
 
+```{r anova P3M2}
+#my results P3M2
+P3M2_results <- tidy(P3M2_anova)
+
+#pulling out values for species
+P3M2_SPECIES_x2 <- P3M2_results$statistic[1]
+P3M2_SPECIES_df <- P3M2_results$df[1]
+P3M2_SPECIES_p <- P3M2_results$p.value[1]
+
+#pulling out values for age
+P3M2_AGE_x2 <- P3M2_results$statistic[2]
+P3M2_AGE_df <- P3M2_results$df[2]
+P3M2_AGE_p <- P3M2_results$p.value[2]
+
+#article results P3M2
+Lee_species_x2 <- c(0.266)
+Lee_species_df <- c(1)
+Lee_species_p <- c(0.606)
+
+Lee_age_x2 <- c(2.745)
+Lee_age_df <- c(2)
+Lee_age_p <- c(0.253)
+```
+
+```{r P3M2 compare}
+Version <- c("Replication", "Original")
+Species_x2 <- c(P3M2_SPECIES_x2, Lee_species_x2)
+Species_df <- c(P3M2_SPECIES_df, Lee_species_df)
+Species_p <- c(P3M2_SPECIES_p, Lee_species_p)
+P3M2_SPcompare <- data.frame(Version,Species_x2,Species_df,Species_p)
+
+Age_x2 <- c(P3M2_AGE_x2, Lee_age_x2)
+Age_df <- c(P3M2_AGE_df, Lee_age_df)
+Age_p <- c(P3M2_AGE_p, Lee_age_p)
+P3M2_AGEcompare <- data.frame(Version,Age_x2,Age_df,Age_p)
+
+P3M2_SPcompare %>%
+  kbl() %>%
+  kable_styling()
+
+P3M2_AGEcompare %>%
+  kbl() %>%
+  kable_styling()
+```
+
+After confirming my models and model tests above, I moved on to running dispersion tests for both the interaction model (P3M1) and independent model (P3M2) for the travel models.
+
+<br>
+
+---
+
+### P3M1/M2 Dispersion Tests
+
+---
+
+Next need to look at nonparametric dispersion tests using the `testDispersion()` function from `{DHARMa}`... first need to simulateResiduals
+
+
+```{r P3M1 P3M2 disp}
+P3M1_sim <- simulateResiduals(fittedModel = P3M1, plot = TRUE) #social interaction
+testDispersion(P3M1_sim)
+P3M2_sim <- simulateResiduals(fittedModel = P3M2, plot = TRUE) #social independent
+testDispersion(P3M2_sim)
+```
+
+```{r disp p3m12}
+Version <- c("Replication", "Original")
+P3M1_Disp <- c(1.0657, 1.066)
+P3M2_Disp <- c(1.0331, 1.043)
+P3M1_P <- c(0.704, 0.608)
+P3M2_P <- c(0.752, 0.704)
+
+P2M3.M4_Dispersion <- data.frame(Version, P2M3_Disp, P2M3_P, P2M4_Disp, P2M4_P)
+
+P2M3.M4_Dispersion %>%
+  kbl() %>%
+  kable_styling()
+
+```
+Again - I got the same gist that their is no significant dispersion in the model but the numbers arent exact matches because of the simulation.
+
 <br>
 
 ---
@@ -476,7 +852,8 @@ print(P3M2_anova)
 
 ---
 
-first test interaction of species and age when looking at social behav
+The last part of prediction 3 involved looking at *social adjusted interaction*. The response variable was calculated by dividing the number of samples that a given lactating female was engaged in social interactions with individuals other than her immature offspring during each infant age class by the total number of social interaction point samples collected on that lactating female during the specific age class. This first test tests the interaction between species and age.
+
 ```{r P3M3}
 P3M3 <- glmmTMB(social_adj/total ~ species * age + (1 | ID), data = feed_travel_social, family = betabinomial(link = "logit"), weight = total)
 P3M3_anova <- Anova(P3M3, type = c("III"), test.statistic = "Chisq")
@@ -487,6 +864,32 @@ look at model/anova results and compare with paper
 summary(P3M3)
 print(P3M3_anova)
 ```
+
+```{r anova p3m3}
+#my results P3M3
+P3M3_results <- tidy(P3M3_anova)
+P3M3_results_x2 <- P3M3_results$statistic[4]
+P3M3_results_df <- P3M3_results$df[4]
+P3M3_results_p <- P3M3_results$p.value[4]
+
+#article results P3M3
+Lee_P3M3_x2 <- c(3.702)
+Lee_P3M3_df <- c(2)
+Lee_P3M3_p <- c(0.157)
+```
+
+```{r P3M3 compare}
+Version <- c("Replication", "Original")
+P3M3_x2 <- c(P3M3_results_x2, Lee_P3M3_x2)
+P3M3_df <- c(P3M3_results_df, Lee_P3M3_df)
+P3M3_p <- c(P3M3_results_p, Lee_P3M3_p)
+P3M3_compare <- data.frame(Version,P3M3_x2,P3M3_df,P3M3_p)
+
+P3M3_compare %>%
+  kbl() %>%
+  kable_styling()
+```
+I again checked the results of the model summary and Anova matched Lee et al.(2021). And they do! We can see from the Anova results above that the interaction between species and infant age was not significant when looking at proportion of time spent in *adjusted* social interaction. The slight difference between my replication and the original is just due to rounding. The next step is to refit the social adjusted model with species and age as independent fixed-effects. 
 
 <br>
 
@@ -512,29 +915,62 @@ print(P3M4_anova)
 
 **species has significant effect on social_adjusted (supported by article)**
 
-<br>
 
----
+```{r anova p3m4}
+#my results P2M4
+P3M4_results <- tidy(P3M4_anova)
 
-### P3: Dispersion Tests
+#pulling out values for species
+P3M4_SPECIES_x2 <- P3M4_results$statistic[1]
+P3M4_SPECIES_df <- P3M4_results$df[1]
+P3M4_SPECIES_p <- P3M4_results$p.value[1]
 
----
+#pulling out values for age
+P3M4_AGE_x2 <- P3M4_results$statistic[2]
+P3M4_AGE_df <- P3M4_results$df[2]
+P3M4_AGE_p <- P3M4_results$p.value[2]
 
-Next need to look at nonparametric dispersion tests using the `testDispersion()` function from `{DHARMa}`... first need to simulateResiduals
+#article results P3M4
+Lee_species_x2 <- c(12.998)
+Lee_species_df <- c(1)
+Lee_species_p <- c(0.001)
 
-#### Social (P3M1 and P3M2)
-
-```{r P3M1 P3M2 disp}
-P3M1_sim <- simulateResiduals(fittedModel = P3M1, plot = TRUE) #social interaction
-testDispersion(P3M1_sim)
-P3M2_sim <- simulateResiduals(fittedModel = P3M2, plot = TRUE) #social independent
-testDispersion(P3M2_sim)
+Lee_age_x2 <- c(0.082)
+Lee_age_df <- c(2)
+Lee_age_p <- c(0.960)
 ```
 
-**NEED TO PULL OUT PVAL AND DEVIANCE RATIO FOR INTERACTION/INDEPENDENT DISPERSION TESTS**
-Not getting exactly same value for deviance ratio... could have to do with how data was simulated?
+```{r P3M4 compare}
+Version <- c("Replication", "Original")
+Species_x2 <- c(P3M4_SPECIES_x2, Lee_species_x2)
+Species_df <- c(P3M4_SPECIES_df, Lee_species_df)
+Species_p <- c(P3M4_SPECIES_p, Lee_species_p)
+P3M4_SPcompare <- data.frame(Version,Species_x2,Species_df,Species_p)
 
-#### Social Adjusted (P3M3 and P3M4)
+Age_x2 <- c(P3M4_AGE_x2, Lee_age_x2)
+Age_df <- c(P3M4_AGE_df, Lee_age_df)
+Age_p <- c(P3M4_AGE_p, Lee_age_p)
+P3M4_AGEcompare <- data.frame(Version,Age_x2,Age_df,Age_p)
+
+P3M4_SPcompare %>%
+  kbl() %>%
+  kable_styling()
+
+P3M4_AGEcompare %>%
+  kbl() %>%
+  kable_styling()
+```
+
+After confirming my models and model tests above, I moved on to running dispersion tests for both the interaction model (P3M3) and independent model (P3M4) for the social adjusted models.
+
+<br>
+
+
+---
+
+### P3M3/M4 Dispersion Tests
+
+---
 
 ```{r P3M3 P3M4 disp}
 P3M3_sim <- simulateResiduals(fittedModel = P3M3, plot = TRUE) #travel interaction
@@ -545,7 +981,25 @@ testDispersion(P3M4_sim)
 
 Also got the same P val for this dispersion test but different deviance ratio (again prob because of simulation differences)...
 
+
+```{r disp p3m34}
+Version <- c("Replication", "Original")
+P3M3_Disp <- c(0.90757, 0.988)
+P3M4_Disp <- c(0.93123, 0.977)
+P3M3_P <- c(0.968, 1.000)
+P3M4_P <- c(0.928, 0.984)
+
+P3M3.M4_Dispersion <- data.frame(Version, P3M3_Disp, P3M3_P, P3M4_Disp, P3M4_P)
+
+P3M3.M4_Dispersion %>%
+  kbl() %>%
+  kable_styling()
+
+```
+Again - it's the same gist.. got about the same numbers in my simulation but also found no significant dispersion in the models. 
+
 <br>
+
 
 ---
 
@@ -553,9 +1007,7 @@ Also got the same P val for this dispersion test but different deviance ratio (a
 
 ---
 
-
-
-Pulling glmmTMB model results into tibble then dataframe to manipulate into a table. I unfortunately couldn't just use `{stargazer}` or similiar packages because next-to-nothing is compatible with glmmTMB outputs... which is annoying!
+This was a long tedious process becausee so many of the popular table packages do not support `glmmTMB` so I had to pull all my model results into tibbles then dataframes to manipulate a final table. I unfortunately couldn't just use `{stargazer}` or similiar packages because next-to-nothing is compatible with glmmTMB outputs... which is annoying!
 
 ```{r tidy}
 #time alone interaction
@@ -602,7 +1054,15 @@ P3M4_df <- as.data.frame(P3M4_tidy)
 
 <br>
 
-```{r table by hand}
+---
+
+### Table 3 Prep
+
+---
+
+In this next step, I specifically pulled out the estimates, se, and p-values I would need for replicating each table.
+
+```{r table by hand 3}
 
 #Table 3 - GLMM parameter estimates for independent effects models
 
@@ -616,6 +1076,80 @@ social_independent <- P3M2_df[c(1:4),c(4:8)]
 
 social_adj_independent <- P3M4_df[c(1:4),c(4:8)]
 
+```
+
+<br>
+
+Changing column names in data frames to more closely match the tables from Lee et al. (2021)
+```{r for loop col names}
+
+alone_independent$term <- c("Intercept", "Chimpanzee","Infant age class 1.5 < 3","Infant age class 3 < 4.5")
+feed_independent$term <- c("Intercept", "Chimpanzee","Infant age class 1.5 < 3","Infant age class 3 < 4.5")
+travel_independent$term <- c("Intercept", "Chimpanzee","Infant age class 1.5 < 3","Infant age class 3 < 4.5")
+social_independent$term <- c("Intercept", "Chimpanzee","Infant age class 1.5 < 3","Infant age class 3 < 4.5")
+social_adj_independent$term <- c("Intercept", "Chimpanzee","Infant age class 1.5 < 3","Infant age class 3 < 4.5")
+
+```
+
+<br>
+
+Preparing independent effects table (table 3) by writing for loop to round the long values
+```{r indep table}
+Independent_Table <- rbind.data.frame(alone_independent,feed_independent,travel_independent,social_independent,social_adj_independent)
+
+
+Independent_Table <- Independent_Table %>% 
+          mutate_if(is.numeric, round, digits = 3)
+
+
+```
+
+<br>
+
+---
+
+### Table 3 - Replication!
+
+---
+
+I spent way too long trying to figure out how to italicize z and P.. decided to just italicize the entire first row. 
+```{r kbl}
+
+#Table3
+
+kbl(Independent_Table, col.names = c("Model", "Estimate", "Standard error", "z", "P"), caption = "Table 3 - GLMM parameter estimates for independent effects models") %>%
+  kable_paper(html_font = "Cambria") %>%
+  pack_rows(index = c("Time Alone" = 4, "Feeding" = 4, "Travel" = 4, "Social interactions" = 4, "Adjusted social interactions" = 4))%>%
+  add_indent(1:20, level_of_indent = 10)%>%
+  row_spec(0, italic = T)
+  
+```
+
+<br>
+
+---
+
+### Table 3 - Original!
+
+---
+
+This is a screenshot captured from Lee et al. (2021) of Table 3.
+
+```{r article table3, echo=FALSE, out.width = '100%'}
+knitr::include_graphics("img/Table3.png", error = FALSE)
+```
+
+<br>
+
+---
+
+### Table 4 Prep
+
+---
+
+I followed the same steps from above to prepare the data for the interaction effects table.
+
+```{r table by hand 4}
 
 #Table 4 - GLMM parameter estimates for interaction effect models
 
@@ -631,55 +1165,7 @@ social_adj_interaction <- P3M3_df[c(1,5,6),c(4:8)]
 
 ```
 
-<br>
-
-change column names in data frames
-```{r for loop col names}
-
-alone_independent$term <- c("Intercept", "Chimpanzee","Infant age class 1.5 < 3","Infant age class 3 < 4.5")
-feed_independent$term <- c("Intercept", "Chimpanzee","Infant age class 1.5 < 3","Infant age class 3 < 4.5")
-travel_independent$term <- c("Intercept", "Chimpanzee","Infant age class 1.5 < 3","Infant age class 3 < 4.5")
-social_independent$term <- c("Intercept", "Chimpanzee","Infant age class 1.5 < 3","Infant age class 3 < 4.5")
-social_adj_independent$term <- c("Intercept", "Chimpanzee","Infant age class 1.5 < 3","Infant age class 3 < 4.5")
-
-```
-
-<br>
-
-Preparing independent table (table 3)
-```{r indep table}
-Independent_Table <- rbind.data.frame(alone_independent,feed_independent,travel_independent,social_independent,social_adj_independent)
-
-
-Independent_Table <- Independent_Table %>% 
-          mutate_if(is.numeric, round, digits = 3)
-
-
-```
-
-<br>
-
-Table 3!
-spent way too long trying to figure out how to italicize z and P.. decided to just italicize the entire first row
-```{r kbl}
-
-#Table3
-
-kbl(Independent_Table, col.names = c("Model", "Estimate", "Standard error", "z", "P"), caption = "Table 3 - GLMM parameter estimates for independent effects models") %>%
-  kable_paper(html_font = "Cambria") %>%
-  pack_rows(index = c("Time Alone" = 4, "Feeding" = 4, "Travel" = 4, "Social interactions" = 4, "Adjusted social interactions" = 4))%>%
-  add_indent(1:20, level_of_indent = 10)%>%
-  row_spec(0, italic = T)
-  
-```
-
-Table 3 - screenshot captured from Lee et al. (2021)
-
-```{r article table3, echo=FALSE, out.width = '100%'}
-knitr::include_graphics("img/Table3.png", error = FALSE)
-```
-
-
+Changing term names for consistency with the original article.
 ```{r interaction labs}
 
 alone_interaction$term <- c("Intercept","Chimpanzee × Age 1.5 < 3", "Chimpanzee × Age 3 < 4.5")
@@ -690,7 +1176,7 @@ social_adj_interaction$term <- c("Intercept","Chimpanzee × Age 1.5 < 3", "Chimp
 
 ```
 
-interaction table prep
+Interaction table prep with rounding and dataframe creation.
 ```{r interaction table}
 Interaction_Table <- rbind.data.frame(alone_interaction,feed_interaction,travel_interaction,social_interaction,social_adj_interaction)
 
@@ -698,12 +1184,20 @@ Interaction_Table <- rbind.data.frame(alone_interaction,feed_interaction,travel_
 Interaction_Table <- Interaction_Table %>% 
           mutate_if(is.numeric, round, digits = 3)
 
+
+#for some reason I had to alter the row names because without this step my table kept printing col numbers and the numbers weren't actually 1-15.. but this fixed it!
+
 rownames(Interaction_Table) <- c(1:15)
-
-
 ```
 
-spent way too long trying to figure out how to italicize z and P.. decided to just italicize the entire first row
+<br>
+
+---
+
+### Table 4 - Replication!
+
+---
+
 ```{r interact kbl}
 #Table 4
 
@@ -716,8 +1210,15 @@ kbl(Interaction_Table, col.names = c("Model", "Estimate", "Standard error", "z",
   
 ```
 
+<br>
 
-Table 4 - screenshot captured from Lee et al. (2021)
+---
+
+### Table 4 - Original!
+
+---
+
+This is a screenshot captured from Lee et al. (2021) of Table 4.
 
 ```{r article table4, echo=FALSE, out.width = '100%'}
 knitr::include_graphics("img/Table4.png", error = FALSE)
@@ -725,12 +1226,12 @@ knitr::include_graphics("img/Table4.png", error = FALSE)
 
 <br>
 
+
 ---
 
 ## Figure Replication
 
 ---
-
 
 
 I first built a theme with the approximate fonts/sizes/format used in Lee et al. (2021), though I did add colors!
@@ -743,7 +1244,9 @@ leetheme <- theme(plot.title = element_text(family = "Times", "bold", size = 12,
 ```
 
 
-I used the `for` loops below to add new columns with proportions of each behavior for figure-making
+I used the `for` loops below to add new columns with proportions of each behavior for figure-making because I could not just use the proportion I did in the models built earlier.
+
+<br>
 ```{r fig prep}
 #prep for fig1
 time_alone$pct <- NULL 
@@ -793,6 +1296,16 @@ behav.data <- feed_travel_social%>%
   
 ```
 
+<br>
+
+
+---
+
+### Figure 1 - Replication!
+
+---
+
+
 Figure 1 - Mean ± standard error percentage of time that lactating females spent ranging in parties with only their immature offspring.
 
 ```{r fig 1}
@@ -814,6 +1327,28 @@ fig1 <- ggplot(alone.data, aes(age, AvgPct)) + theme_classic() + leetheme + ggti
 fig1
 ```
 
+<br>
+
+---
+
+### Figure 1 - Original!
+
+---
+
+```{r article fig1, echo=FALSE, out.width = '100%'}
+knitr::include_graphics("img/Fig1.png", error = FALSE)
+```
+
+<br>
+
+
+---
+
+### Figure 2 - Replication!
+
+---
+
+
 Figure 2 - Mean ± standard error percentage of time that lactating females spent feeding.
 ```{r fig 2}
 
@@ -834,6 +1369,27 @@ fig2 <- ggplot(behav.data, aes(age, AvgPct.Feed)) + theme_classic() + leetheme +
 fig2
 ```
 
+<br>
+
+---
+
+### Figure 2 - Original!
+
+---
+
+```{r article fig2, echo=FALSE, out.width = '100%'}
+knitr::include_graphics("img/Fig2.png", error = FALSE)
+```
+
+<br>
+
+---
+
+### Figure 3 - Replication!
+
+---
+
+
 Figure 3 - Mean ± standard error percentage of time that lactating females spent traveling.
 ```{r fig 3}
 
@@ -853,6 +1409,27 @@ fig3 <- ggplot(behav.data, aes(age, AvgPct.Travel)) + theme_classic() + leetheme
   
 fig3
 ```
+
+<br>
+
+---
+
+### Figure 3 - Original!
+
+---
+
+```{r article fig3, echo=FALSE, out.width = '100%'}
+knitr::include_graphics("img/Fig3.png", error = FALSE)
+```
+
+<br>
+
+---
+
+### Figure 4 - Replication!
+
+---
+
 
 Figure 4 - Mean ± standard error percentage of time that lactating females spent engaged in social interactions with any community member.
 
@@ -875,6 +1452,26 @@ fig4 <- ggplot(behav.data, aes(age, AvgPct.Social)) + theme_classic() + leetheme
 fig4
 ```
 
+<br>
+
+---
+
+### Figure 4 - Original!
+
+---
+
+```{r article fig4, echo=FALSE, out.width = '100%'}
+knitr::include_graphics("img/Fig4.png", error = FALSE)
+```
+
+<br>
+
+---
+
+### Figure 5 - Replication!
+
+---
+
 Figure 5 - Mean ± standard error percentage of social interactions in which lactating females spent engaged in social interactions with individuals other than their immature offspring.
 
 ```{r fig 5}
@@ -896,5 +1493,26 @@ fig5 <- ggplot(behav.data, aes(age, AvgPct.Adjust)) + theme_classic() + leetheme
 fig5
 ```
 
+<br>
 
+---
 
+### Figure 5 - Original!
+
+---
+
+```{r article fig5, echo=FALSE, out.width = '100%'}
+knitr::include_graphics("img/Fig5.png", error = FALSE)
+```
+
+<br>
+
+<br>
+
+---
+
+## Final Thoughts
+
+---
+
+This took a long time! I had a tough time organizing all my thoughts/data. Especially when it came to replicating so many figures
