--- a/vrz_DataReplication_FINAL.Rmd
+++ b/vrz_DataReplication_FINAL.Rmd
@@ -1515,4 +1515,14 @@ knitr::include_graphics("img/Fig5.png", error = FALSE)
 
 ---
 
-This took a long time! I had a tough time organizing all my thoughts/data. Especially when it came to replicating so many figures
+Although it took me a *very* long time to figure out how to get my `glmmTMB` models to have the same output as the authors of the original paper, once I matched the first model the rest were fairly easy. I think all the research/reading I did about GLMMs in general was very helpful in providing a solid background  to approach the replication with. Also after all the struggles I faced using the `{glmmTMB}` package and the fact that it was not compatible with the popular packages that make publication-ready tables, I don't really understand why the authors used this package and not the `glmer` function from `{lme4}`. The `{glmmTMB}` package seems most appropriate for when you have zero-inflation or dispersion factors in your model, which these did not. Also - given the difficulties I had making my tables, I am very curious how Lee et al. (2021) made their tables and also their reasoning for using the `{glmmTMB}` package. My only thought is that maybe `{lme4}` only supports `binomial` error structures and not the `beta-binomial` used here, which given my googling seems like it might be the reason. 
+
+Overall this assignment was extremely insightful. I definitely felt very able to approach the replication with my knowledge from this semester and the success I have had Googling and reading/researching to understand certain functions or packages and general troubleshooting. The statistical analysis of research has always felt overwhelming or daunting because it feels nothing like any intro to statistics course I've taken. But this assignment was an amazing way to tackle analyses and really understand them and practice thinking critically about data analysis rather than just saying 'oh I don't know how to do this!'. I really impressed myself with my ability to figure out how to get my models to match the authors even though they hadn't specified the need to include `weight` in the function. I was definitely not expecting the figure/table replication portion to take as long as it did! But I was able to make pretty identical figures, and with colors! Other than the fact that I couldn't figure out how to add statistical significance. I think the authors could have made more interesting or at least eye-catching figures. As for the tables, it took **a lot** of messing about with kable to figure out how to group my columns into the model types but I think that process could have been easier using a different package (had the glmms been made with lme4). I do think the tables I made are much cleaner/easier to read than the originals. The original tables are a little cramped and difficult to go back and reference while running through the analyses. Also just a random thing, I don't understand why the interaction effects models were in Table 4 and not Table 3 since for every prediction/model the interaction effects were tested *first*. It seemed kind of odd to then have those tables flipped? Regardless, I think this assignment was successful overall! I learned a lot and feel *significantly* more confident about my R/statistical analysis abilities. 
+
+<br>
+
+<center>
+
+![when your model finally has the right output :')](https://i.giphy.com/media/KWQIFeCPRXG6cSGpfL/giphy.gif)
+
+</center>
